--- a/src/components/ImageView.css
+++ b/src/components/ImageView.css
@@ -1,6 +1,6 @@
 .imageview {
-    min-width: 60%;
-    height: calc(91vh - 40px);
+    width: 60%;
+    height: calc(91vh - 0px);
     float: left;
     border: 1px solid hsl(0, 0%, 0%);
     border-radius: 10px;
@@ -10,16 +10,26 @@
 footer{
     width: 60%;
     position: absolute;
-    bottom: 3%;
+    bottom: 3.5%;
     height: 40px;
     text-align: center;
-
 }
 .btns{
     width: 100%;
+    height: 40px;
     margin: 0 auto;
 }
+.btn{
+    height: 30px;
+    margin: 0 20px !important;
+}
 .img-content{
-    border:1px solid #000000;
-    margin:5px;
+    width:100%;
+    border:0.5px solid #000000;
+    /* margin:5px; */
+}
+.img {
+    max-width: 100%;
+    max-height: calc(91vh - 80px);
+    margin: 0;
 }
