--- a/src/components/MyView.css
+++ b/src/components/MyView.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 .App {
   text-align: center;
 }
@@ -17,11 +18,19 @@
   background-color: #282c34;
   height: 10%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.usrname {
+  position: absolute;
+  right: 20px;
+  text-align: right;
+  /* display: inline; */
+  font-size: 10px;
 }
 
 
