--- a/src/login.css
+++ b/src/login.css
@@ -4,8 +4,8 @@
     margin-top: 100px;
 }
 .login-form{
-    width: 300px;
-    height:150px;
+    width: 400px;
+    height:250px;
     border: 2px solid #000000;
     border-radius: 5px;
     padding: 20px;
@@ -14,9 +14,11 @@
 .login-name{
     font-weight: bolder;
     margin: 10px;
+    font-size: 20px;
 }
 .username{
     margin: 30px;
+    width: 200px;
 }
 .btn{
     margin: 20px;
