--- a/src/components/ImageView.css
+++ b/src/components/ImageView.css
@@ -25,6 +25,7 @@ footer{
 }
 .img-content{
     width:100%;
+    height: calc(100% - 40px);
     border:0.5px solid #000000;
     /* margin:5px; */
 }
